fix(gtk320: toolbar): imagebutton spacing to make it square - 2

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -37,7 +37,7 @@
         &.text-button { padding: $spacing; }
 
         &.image-button {
-            padding: $spacing $spacing + 8px;
+            padding: $spacing $spacing + 4px;
         }
     }
 
